--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Today you will be working together with someone else in your cohort to produce an Express server with full CRUD functionality for 2 collections of resources that uses a PostgreSQL database. You can use the resource collections provided in this repo (beers and students) or create your own data sets. Your goal is to complete this by the end of the day, but if you do not finish that is ok (you can work it out with your partner to finish over the weekend or next week).",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,10 @@
   },
   "homepage": "https://github.com/svphan1/express-knex-mastery#readme",
   "dependencies": {
-    "express": "^4.16.4"
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
+    "express": "^4.16.4",
+    "knex": "^0.15.2",
+    "pg": "^7.6.0"
   }
 }
